# mallocMC

./: CMakeLists.txt  README.md  halloc_CMakeLists.txt
examples/: example.cu  mallocMC_example03.cu  malloc_overwrite.cu  minimal_example.cu  policy_example.cu
src/include/mallocMC/: CreationPolicies.hpp  mallocMC_constraints.hpp  mallocMC_hostclass.hpp  mallocMC_utils.hpp
src/include/mallocMC/creationPolicies/: Halloc.hpp  Halloc_impl.hpp  Scatter_impl.hpp
src/include/mallocMC/reservePoolPolicies/: CudaSplitHeap.hpp  CudaSplitHeap_impl.hpp  NoOp.hpp  NoOp_impl.hpp
src/include/scatteralloc/: CreationPolicies.hpp  DistributionPolicies.hpp  GetHeapPolicies.hpp  OOMPolicies.hpp  get_heap_simpleMalloc.cuh  policy_based_heap.cuh  policy_based_heap_impl.cuh  policy_malloc_config.hpp  policy_malloc_hostclass.hpp  policy_malloc_overwrites.hpp  scatterd_heap_policy.cuh  utils.h  xmalloc_like_distribution.cuh
src/include/scatteralloc/creationPolicies/: OldMalloc.hpp  OldMalloc_impl.hpp  Scatter.hpp  Scatter_impl.hpp
src/include/scatteralloc/distributionPolicies/: AlignOnly.hpp  AlignOnly_impl.hpp  XMallocSIMD.hpp  XMallocSIMD_impl.hpp
src/include/scatteralloc/getHeapPolicies/: CudaSetLimits.hpp  CudaSetLimits_impl.hpp  SimpleCudaMalloc.hpp  SimpleCudaMalloc_impl.hpp
src/include/scatteralloc/oOMPolicies/: ReturnNull.hpp
tests/: oomBug.cu  progressbar.cu  verifyOnPageMasksFormula.cu  verify_heap.cu  verify_heap_config.hpp
